<resources>
    <string name="app_name">DEN Remote</string>
    <string name="connect">Connect</string>
    <string name="remoter">DEN Remote</string>
    <string name="programs">Program List</string>
    <string name="epg">Epg</string>
    <string name="ip">IP</string>
    <string name="command">Command</string>
    <string name="key_value">keyValue</string>

    <string name="advertisement_exit_text">Click On The Skip</string>
    <string name="advertisement_title">Advertisement</string>


    <!-- egp -->
    <string name="epg_program_title">Select Program</string>
    <string name="epg_time_title">Select Date</string>
    <string name="epg_tab_start_time">Start Time</string>
    <string name="epg_tab_end_time">End Time</string>

    <string name="epg_tab_reserve">Reserve</string>
    <string name="epg_tab_time">Time</string>
    <string name="epg_tab_event">Events</string>

    <!--epg dialog-->
    <string name="epg_dialog_title">Epg Detail Info</string>
    <string name="epg_dialog_pro_name">Name:</string>
    <string name="epg_dialog_date">Date:</string>
    <string name="epg_dialog_start_time">Start Time:</string>
    <string name="epg_dialog_end_time">End Time:</string>
    <string name="epg_dialog_event_name">Events:</string>
    <string name="epg_dialog_short_descriptor">Descriptions:</string>
    <string name="epg_dialog_confirm">Confirm</string>
    <string name="epg_dialog_test">ccc</string>

    <!-- epg reserve -->
    <string name="epg_reserve_event_info">event info</string>

    <string name="epg_reserve_event_type">event type</string>
    <string name="epg_reserve_event_id">event id</string>
    <string name="epg_reserve_job_index">job index</string>
    <string name="epg_reserve_program_index">program index</string>

    <string name="epg_reserve_date">date</string>
    <string name="epg_reserve_start_time">start time</string>
    <string name="epg_reserve_end_time">end time</string>
    <string name="epg_reserve_event">event</string>
    <string name="epg_reserve_boot_type">book type</string>


    <string name="epg_reserve_select">select</string>
    <string name="epg_reserve_conflict">conflict</string>


    <string name="epg_reserve_menu_view">View</string>
    <string name="epg_reserve_menu_view_series">View Series</string>
    <string name="epg_reserve_menu_record">Record</string>
    <string name="epg_reserve_menu_record_series">Record Series</string>

    <!-- epg clash dialog-->
    <string name="epg_clash_dialog_title">Following reminders are conflicting with eath other</string>
    <string name="epg_clash_dialog_confirm">Confirm</string>
    <string name="epg_clash_dialog_cancel">Cancel</string>

    <!-- programs -->
    <string name="pro_lcn">LCN</string>
    <string name="pro_name">Name</string>
    <string name="pro_service_id">Service ID</string>
    <string name="pro_index">Program Index</string>

    <string name="pro_value">Program Value</string>
    <string name="pro_type">Program Type</string>

    <!-- prompt info -->
    <string name="prompt_find_device">Find Device</string>
    <string name="prompt_update_program_list">Update Program List</string>
    <string name="prompt_update_epg_info">Update Epg Info</string>

    <string name="prompt_switch_program">Switch program</string>




    <!-- scan -->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="scan_text">Please on the qr code</string>
    <string name="ret">Ret</string>

    <string name="btn_scan">Scan</string>
    <string name="scan_title">Scan Connect Device</string>

</resources>
