<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_out_back"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <!--ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_style_no_border"
            android:contentDescription=""
            app:srcCompat="@drawable/ic_star"
            tools:ignore="ContentDescription" /-->

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_epg_white_24dp"
                tools:ignore="ContentDescription,RtlHardcoded" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/epg_dialog_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_h1"
                tools:ignore="InefficientWeight,RtlHardcoded" />

            <ImageButton
                android:id="@+id/dialogClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_style_no_border"
                app:srcCompat="@drawable/ic_close"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/dialog_in_back">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/epg_dialog_pro_name"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/dialogProName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/epg_dialog_date"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/dialogDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/epg_dialog_start_time"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/dialogStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/epg_dialog_end_time"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/dialogEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/epg_dialog_event_name"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/dialogEventName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:layout_weight="2"
                    android:text="@string/epg_dialog_short_descriptor"
                    android:textColor="@color/blue" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dialogShortDescriptor"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_span="4"
                        android:background="@color/white"
                        android:overScrollMode="ifContentScrolls"
                        tools:ignore="ObsoleteLayoutParam" />
                </LinearLayout>
            </ScrollView-->
                <ScrollView
                    android:id="@+id/scrollview_info"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_span="4"
                    android:layout_weight="1"
                    android:background="@color/white"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/dialogShortDescriptor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </ScrollView>
            </TableRow>

        </TableLayout>
    </LinearLayout>
</LinearLayout>
