<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gospell.wildwolf.remoter.EpgActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13.5">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/programFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/programViewExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.06"
                        android:background="@drawable/btn_style_one"
                        app:srcCompat="@drawable/ic_epg_reply"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/showTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.88"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_size_h2" />

                </LinearLayout>

                <ListView
                    android:id="@+id/programView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:clickable="true"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/programBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.13"
                        android:background="@drawable/btn_style_one"
                        app:srcCompat="@drawable/ic_epg_program_list"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/programName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.97"
                        android:clickable="true"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_size_h2" />

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/timeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.13"
                        android:background="@drawable/btn_style_one"
                        app:srcCompat="@drawable/ic_epg_date"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.97"
                        android:clickable="true"
                        android:gravity="center"
                        android:textColor="@color/blue"

                        android:textSize="@dimen/font_size_h2"

                        /><!--内容超出，跑马灯效果-->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/epg_tab_reserve"
                        android:textAllCaps="false"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_size_h2"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/epg_tab_time"
                        android:textAllCaps="false"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_size_h2"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/epg_tab_event"
                        android:textAllCaps="false"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_size_h2"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

                <ListView
                    android:id="@+id/scheduleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background_down_bar"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_mic3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imag1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/micontro">

            </ImageView>

            <TextView
                android:id="@+id/textmico"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/remoter"
                android:lines="1"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_proglist3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imag2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:background="@drawable/program_list">
            </ImageView>

            <TextView
                android:id="@+id/textproglist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="center"
                android:lines="1"
                android:text="@string/programs"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_epg3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:background="@drawable/background_bar_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imag3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:background="@drawable/epg1">

            </ImageView>

            <TextView
                android:id="@+id/epg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/epg"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
